envoy/envoy_node.dev.yaml
overload_manager:
  refresh_interval: 0.25s
  resource_monitors:
    - name: envoy.resource_monitors.fixed_heap
      typed_config:
        '@type': >-
          type.googleapis.com/envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig
        max_heap_size_bytes: 134217728
  actions:
    - name: envoy.overload_actions.shrink_heap
      triggers:
        - name: envoy.resource_monitors.fixed_heap
          threshold:
            value: 0.95
    - name: envoy.overload_actions.stop_accepting_requests
      triggers:
        - name: envoy.resource_monitors.fixed_heap
          threshold:
            value: 0.98
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': >-
                  type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: http_local_route
                  virtual_hosts:
                    - name: http_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          redirect:
                            prefix_rewrite: "/"
                            https_redirect: true
                http_filters:
                - name: envoy.filters.http.router           
    - name: listener_https
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 13000
      listener_filters:
        - name: envoy.filters.listener.tls_inspector
      per_connection_buffer_limit_bytes: 32768
      filter_chains:
        - filter_chain_match:
            # server_names:
            #   - taskyn.ir
            #   - www.taskyn.ir
            #   - storage.taskyn.ir
          # transport_socket:
          #   name: envoy.transport_sockets.tls
          #   typed_config:
          #     '@type': >-
          #       type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          #     common_tls_context:
          #       tls_certificates:
          #         - certificate_chain:
          #             filename: /taskyn-ir.crt
          #           private_key:
          #             filename: /taskyn-ir.key
          #           # password:
          #           #   inline_string: taskyn
          #       alpn_protocols:
          #         - h2
          #         - http/1.1
          #       tls_params:
          #         tls_minimum_protocol_version: TLSv1_2
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': >-
                  type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                use_remote_address: true
                xff_num_trusted_hops: 1
                skip_xff_append: false
                normalize_path: true
                merge_slashes: true
                path_with_escaped_slashes_action: UNESCAPE_AND_REDIRECT
                common_http_protocol_options:
                  idle_timeout: 3600s
                  headers_with_underscores_action: REJECT_REQUEST
                http2_protocol_options:
                  max_concurrent_streams: 200
                  initial_stream_window_size: 65536
                  initial_connection_window_size: 1048576
                stream_idle_timeout: 300s
                request_timeout: 300s
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        authnzJWT:
                          issuer: 'https://taskyn.ir'
                          audiences:
                            - taskyn
                          clock_skew_seconds: 0
                          remote_jwks:
                            http_uri:
                              uri: >-
                                http://127.0.0.1:3000/api/v1/authnz/jwt/key/public
                              cluster: node_app
                              timeout: 1s
                            cache_duration:
                              seconds: 1200
                          from_headers:
                            - name: Authorization
                              value_prefix: 'Bearer '
                          from_cookies:
                            - authorization
                          forward: true
                          forward_payload_header: x-jwt-payload
                      rules:
                        - match:
                            prefix: /api/v1/authnz/refresh
                        - match:
                            prefix: /api/v1/authnz/passwordless
                        - match:
                            prefix: /api/v1
                          requires:
                            provider_name: authnzJWT
                        - match:
                            prefix: /public
                          requires:
                            provider_name: authnzJWT
                        - match:
                            prefix: /private
                          requires:
                            provider_name: authnzJWT    
                        - match:
                            prefix: /
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: rate_limit
                      token_bucket:
                        max_tokens: 500
                        tokens_per_fill: 200
                        fill_interval: 60s
                      filter_enabled:
                        runtime_key: local_rate_limit
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                      filter_enforced:
                        runtime_key: local_rate_limit
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                      response_headers_to_add:
                        - append: false
                          header:
                            key: x-too-much-taskyn-buddy
                            value: 'true'
                      local_rate_limit_per_downstream_connection: true
                  - name: envoy.filters.http.compressor
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
                      response_direction_config:
                        common_config:
                          min_content_length: 10
                          content_type:
                            - application/json
                            - text/plain
                        disable_on_etag_header: false
                      compressor_library:
                        name: text_optimized
                        typed_config:
                          '@type': >-
                            type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                          memory_level: 7
                  - name: envoy.filters.http.router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: node_service
                      domains: ["*"]
                      # cors:
                      #   allow_origin_string_match: []
                      #   - taskyn.ir
                      #   - www.taskyn.ir
                      routes:
                        - match:
                            prefix: /api/v1/authnz/jwt/key/public
                          direct_response:
                            status: 403
                            body:
                              inline_string: '{"error": "forbidden"}'
                        - match:
                            prefix: /api/v1
                          route:
                            cluster: node_app
                    - name: minio_service
                      domains:
                        - storage.taskyn.ir
                      # cors:
                      #   allow_origin_string_match: ["*"]
                      routes:
                        - match:
                            prefix: "/private/"
                          route:
                            prefix_rewrite: "/"
                            cluster: minio
                            host_rewrite_literal: '127.0.0.1:9000'
                          request_headers_to_remove:
                            - x-jwt-payload
                            - Authorization
  clusters:
    - name: node_app
      connect_timeout: 1s
      type: strict_dns
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: node_app
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3000
    - name: minio
      connect_timeout: 1s
      type: strict_dns
      lb_policy: ROUND_ROBIN
      per_connection_buffer_limit_bytes: 5242880
      load_assignment:
        cluster_name: minio
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9000
# layered_runtime:
#   layers:
#   - name: static_layer_0
#     static_layer:
#       envoy:
#         resource_limits:
#           listener:
#             taskyn_listener:
#               connection_limit: 20000
#       overload:
#         global_downstream_max_connections: 50000
